--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         <button id="contacts-btn" class="btn btn-secondary">
                             <i class="ti ti-address-book"></i> Adressverwaltung
                         </button>
+                        <button id="cleanup-dummy-btn" class="btn btn-danger">
+                            <i class="ti ti-trash"></i> Dummy-Daten…
+                        </button>
                         <button id="new-deal-btn" class="btn btn-primary">
                             <i class="ti ti-plus"></i> Neues Geschäft
                         </button>
@@ -193,6 +196,9 @@
                     <div class="header-actions">
                         <button id="export-deal-btn" class="btn btn-primary">
                             <i class="ti ti-download"></i> Export
+                        </button>
+                        <button id="delete-deal-btn" class="btn btn-danger">
+                            <i class="ti ti-trash"></i> Löschen…
                         </button>
                     </div>
                 </div>
@@ -875,6 +881,9 @@
                                 <button id="save-contact-btn" class="btn btn-primary btn-sm">
                                     <i class="ti ti-device-floppy"></i> Speichern
                                 </button>
+                                <button id="delete-contact-btn" class="btn btn-danger btn-sm">
+                                    <i class="ti ti-trash"></i> Löschen…
+                                </button>
                             </div>
                         </div>
                         <div class="contact-detail-grid">
@@ -944,6 +953,102 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Entity Modal -->
+    <div id="delete-entity-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="delete-entity-title">Eintrag löschen</h3>
+                <button class="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p id="delete-entity-text" class="text-secondary"></p>
+                <p id="delete-entity-warning" class="text-secondary" style="display:none; color: var(--danger); font-weight: 700;">
+                    Achtung: Endgültiges Löschen entfernt Daten inkl. Dokumente und Audit. Dieser Vorgang ist nicht rückgängig.
+                </p>
+                <div class="form-group">
+                    <label>
+                        <input type="radio" name="delete-mode" value="archive" checked>
+                        Archivieren (Option A) – bleibt intern erhalten
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        <input type="radio" name="delete-mode" value="purge">
+                        Endgültig löschen (Option B) – unwiderruflich
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="delete-reason">Begründung (optional)</label>
+                    <textarea id="delete-reason" rows="2" placeholder="z.B. Dummy-Daten, Testlauf"></textarea>
+                </div>
+                <div class="form-group">
+                    <label>
+                        <input type="checkbox" id="delete-confirm-checkbox">
+                        Ich bestätige das endgültige Löschen.
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="delete-confirm-text">Bitte tippe den Bestätigungscode</label>
+                    <input type="text" id="delete-confirm-text" placeholder="DELETE ..." autocomplete="off">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="delete-entity-cancel" class="btn btn-secondary">Abbrechen</button>
+                <button type="button" id="delete-entity-confirm" class="btn btn-danger">Löschen</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Dummy Cleanup Modal -->
+    <div id="dummy-cleanup-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Dummy-Daten bereinigen</h3>
+                <button class="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p class="text-secondary">
+                    Diese Aktion betrifft Dummy-Daten. Du kannst archivieren (Option A) oder endgültig löschen (Option B).
+                </p>
+                <p id="dummy-cleanup-warning" class="text-secondary" style="display:none; color: var(--danger); font-weight: 700;">
+                    Achtung: Endgültiges Löschen entfernt Daten inkl. Dokumente und Audit. Dieser Vorgang ist nicht rückgängig.
+                </p>
+                <div class="form-group">
+                    <label>
+                        <input type="radio" name="dummy-mode" value="archive" checked>
+                        Archivieren (Option A)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        <input type="radio" name="dummy-mode" value="purge">
+                        Endgültig löschen (Option B)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        <input type="checkbox" id="dummy-reset-numbering" checked>
+                        Nummernkreis neu starten (setzt alle bestehenden Deals als Dummy)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        <input type="checkbox" id="dummy-confirm-checkbox">
+                        Ich bestätige das endgültige Löschen.
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="dummy-confirm-text">Bitte tippe den Bestätigungscode</label>
+                    <input type="text" id="dummy-confirm-text" placeholder="DELETE DUMMY" autocomplete="off">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="dummy-cancel" class="btn btn-secondary">Abbrechen</button>
+                <button type="button" id="dummy-confirm" class="btn btn-danger">Ausführen</button>
             </div>
         </div>
     </div>
